e-commerce-base/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ammazone
  labels:
    app.kubernetes.io/part-of: ammazone
